--- a/src/Components/Home.scss
+++ b/src/Components/Home.scss
@@ -1,7 +1,7 @@
 .container {
     width: 100%;
     will-change: contents;
-    position: absolute;
+    position: relative;
     opacity: 0;
     top: 5%;
     bottom: 5%;
@@ -17,15 +17,16 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: auto;
     position: relative;
     background-color: #121212;  /* Keep existing background */
     
     .text-zone {
         position: relative;
         text-align: center;
-        width: 60%;
+        width: 100%;
         max-height: 90%;
+        margin: auto;
         transform: translateY(-50%);
         
         h1 {
