--- a/src/Components/Home.scss
+++ b/src/Components/Home.scss
@@ -2,16 +2,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: auto;
+    height: 70%;
     position: relative;
     background-color: #121212;  /* Keep existing background */
-    width: 80%;
+    width: 70%;
     will-change: contents;
     position: relative;
-    top: 5%;
-    bottom: 5%;
-    margin-top: 1%;
-    margin-bottom: 1%;
+    top: 25%;
+    left: 25%;
+    margin-top: 5%;
     z-index: 1;
     transform-style: preserve-3d;
     animation: fadeIn 1s forwards;
