--- a/src/Components/AboutMe.css
+++ b/src/Components/AboutMe.css
@@ -3,7 +3,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 20px;
+  padding-top: 0px;
+  padding-left: 80px;
+  padding-bottom: 10px;
   background: linear-gradient(135deg, #1f1f1f, #3a3a3a);
   color: #ddd;
 }
@@ -36,7 +38,7 @@
 
 /* Projects Section */
 .projects-container {
-  width: 80%;
+  width: 100%;
   margin: 20px 0;
 }
 
@@ -144,7 +146,7 @@
 }
 
 .tech-icon {
-  font-size: 6rem;
+  font-size: 4rem;
 }
 
 .tech-icon img {
