--- a/src/Components/AboutMe.css
+++ b/src/Components/AboutMe.css
@@ -1,11 +1,12 @@
 /* General Styles for About Me Section */
 .about-me-container {
+  height:95%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 0px;
-  padding-left: 80px;
-  padding-bottom: 10px;
+  margin-top: 1.5%;
+  margin-left: 90px;
+  margin-bottom: 1.5%;
   background: linear-gradient(135deg, #1f1f1f, #3a3a3a);
   color: #ddd;
 }
@@ -27,7 +28,7 @@
   animation: fadeIn 2s ease-out;
 }
 
-.text-zone .summary {
+.summary {
   font-size: 2rem;
   line-height: 1.8;
   color: #ddd;
@@ -39,12 +40,14 @@
 /* Projects Section */
 .projects-container {
   width: 100%;
-  margin: 20px 0;
+  height: 80vh;
 }
 
 .projects-container h2 {
+  margin-top: 3%;
+  margin-bottom: 3%;
   text-align: center;
-  font-size: 3rem;
+  font-size: 4rem;
   color: #f2a712;
   text-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
   animation: fadeIn 2s ease-in-out;
@@ -108,12 +111,14 @@
 /* Technologies Section */
 .technologies-container {
   width: 100%;
-  margin: 10px;
+  height: 80vh;
 }
 
 .technologies-container h2 {
+  margin-top: 2%;
+  margin-bottom: 4%;
   text-align: center;
-  font-size: 6rem;
+  font-size: 4rem;
   color: #f2a712;
   margin-bottom: 30px;
   text-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
@@ -128,11 +133,14 @@
 
 
 .technology-card {
+  margin-top: 5%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   padding: 15px;
+  width:60%;
+  height:80%;
   border-radius: 10px;
   background: rgba(255, 255, 255, 0.05);
   backdrop-filter: blur(10px);
@@ -146,12 +154,12 @@
 }
 
 .tech-icon {
-  font-size: 4rem;
+  font-size: 3.5rem;
 }
 
 .tech-icon img {
   width: 80px;
-  height: 40px;
+  height: 30px;
 }
 
 .tech-name {
@@ -185,11 +193,13 @@
 .controls .left-arrow {
   position: absolute;
   left: 160px;
+  bottom:100 px;
 }
 
 .controls .right-arrow {
   position: absolute;
   right: 20px;
+  bottom:100 px;
 }
 
 /* Animations */
@@ -222,31 +232,31 @@
 /* Responsive Design for Devices Between 768px and 1200px */
 @media (min-width: 768px) and (max-width: 1200px) {
   h1 {
-    font-size: 4rem;
+    font-size: 3.5rem;
   }
 
   .summary {
-    font-size: 3rem;
+    font-size: 2.4rem;
     max-width: 85%;
   }
 
-  .projects-list .project-card {
-    width: 45%;
+  .project-card {
+    display: flex;
+    flex-direction: column;
+    width: 30%;
   }
 
   .project-logo {
-    max-width: 80%;
-    max-height: 60%;
     width: 175px;
     height: 140px;
   }
 
   .project-details {
-    font-size: 2rem;
+    font-size: 2.4rem;
   }
 
   h2 {
-    font-size: 3rem;
+    font-size: 3.6rem;
   }
 
   .technologies-grid {
@@ -258,7 +268,7 @@
   }
 
   .technologies-container h2{
-    font-size: 3rem;
+    font-size: 3.6rem;
   }
 
   ::-webkit-scrollbar {
@@ -295,22 +305,33 @@
 
 /* Responsive Design for Devices with Screen Width ≤ 768px */
 @media (max-width: 767px) {
+  .about-me-container {
+    height:95%;
+    margin-left: 8%;
+    align-items: center;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    margin-right: 2%;
+    background: linear-gradient(135deg, #1f1f1f, #3a3a3a);
+    color: #ddd;
+  }
+
+
   h1 {
     font-size: 2.2rem;
   }
 
   .summary {
     font-size: 1.4rem;
-    max-width: 90%;
   }
-
-  .projects-list .project-card {
-    width: 100%;
+  
+  .project-card {
+    display: flex;
+    flex-direction: column;
+    width: 26%;
   }
 
   .project-logo {
-    max-width: 100%;
-    max-height: 50%;
     width: 120px;
     height: 100px;
   }
@@ -365,10 +386,5 @@
   .right-arrow {
     right: 30px;
   }
-
-  .text-zone,
-  .projects-container,
-  .technologies-container {
-    padding: 10px;
-  }
 }
+
