--- a/src/Components/Home.scss
+++ b/src/Components/Home.scss
@@ -62,7 +62,7 @@
         }
 
         h2 {
-            color: #8d8d8d;
+            color: #fff;
             margin-top: 20px;
             font-weight: 400;
             font-size: 12px;
@@ -175,6 +175,7 @@
             h2 {
                 font-size: 8px;
                 letter-spacing: 1.5px;
+                font-weight: 600;
             }
 
             .flat-button {
